Refactor fields to be final in upgrade classes for immutability